<resources>
    <string name="app_name">FreeTelecoid</string>
    <string name="action_settings">Settings</string>
    <string name="power" translatable="false">on|off</string>
    <string name="tv" translatable="false">A/V</string>
    <string name="FreeTelecoidHd1">HD1 Remote control</string>
    <string name="FreeTelecoidHd2">HD2 Remote control</string>
    <string name="FreeTelecoidFavorites">Favorites</string>
    <string name="sortie">Exit</string>
    <string name="mute">mute</string>
    <string name="bwd">bwd</string>
    <string name="fwd">fwd</string>
    <string name="e_code_hd">Bad HD code</string>
    <string name="uri_hd1" translatable="false">http://hd1.freebox.fr/pub/remote_control?code=%s&amp;key=%S&amp;long=%s&amp;repeat=%d</string>
    <string name="uri_hd2" translatable="false">http://hd2.freebox.fr/pub/remote_control?code=%s&amp;key=%s&amp;long=%s&amp;repeat=%d</string>
    <string name="pref_V5" translatable="false">pref_v5</string>
    <string name="pref_title_v5">Freebox v5</string>

</resources>
